--- a/hospital2/app/src/main/AndroidManifest.xml
+++ b/hospital2/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.nadag.hospital2">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -20,8 +21,11 @@
         </activity>
         <activity android:name=".second" />
         <activity android:name=".Deppartments" />
-        <activity android:name=".data_of_new_patient"></activity>
-
+        <activity android:name=".data_of_new_patient" />
+        <activity android:name=".Physical_therapy" />
+        <activity android:name=".Dental" />
+        <activity android:name=".Optical" />
+        <activity android:name=".Pediatric"></activity>
     </application>
 
 </manifest>
